<resources>
    <string name="app_name">记住扑克牌</string>
    <string name="reDisrupt">重新开始</string>
    <string name="startRemember">重新记时</string>
    <string name="startDictation">开始回忆</string>
    <string name="history">历史记录</string>
    <string name="King">大王</string>
    <string name="littleKing">小王</string>
    <string name="spades">黑桃</string>
    <string name="hearts">红桃</string>
    <string name="squarePiece">方片</string>
    <string name="plumBlossom">梅花</string>
    <string name="a">A</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_10">10</string>
    <string name="_9">9</string>
    <string name="j">J</string>
    <string name="q">Q</string>
    <string name="k">K</string>
    <string name="upPage">上一张</string>
    <string name="nextPage">下一张</string>
    <string name="pleaseSelect">请选择</string>
    <string name="endDictation">结束背诵</string>
    <string name="right">正确: </string>
    <string name="wrong">错误: </string>
    <string name="correct_rate">正确率</string>
    <string name="rememberTime">记忆用时: </string>
    <string name="recallTime">回忆用时: </string>
    <string name="dictationTime">背诵时间: </string>
    <string name="totalTime">总用时</string>
    <string name="tryAgain">再来一遍</string>
    <string name="addOil">加油!!!</string>
    <string name="saveItem">保存记录</string>
    <string name="deleteRecord">删除记录</string>
    <string name="endRecite">结束背诵</string>
    <string name="pauseRecite">中止背诵</string>
    <string name="alreadySaveReciteRecord">已保存练习记录</string>
    <string name="noHistoryFound">未找到历史记录</string>
    <string name="timingBegins">计时开始</string>
    <string name="isShufflingPlaying">正在打乱扑克牌，重新开始</string>
</resources>