<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="10dp"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/rl_control1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_control2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_right_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/right"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_right"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/right"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_wrong_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="right"
            android:text="@string/wrong"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_wrong"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/wrong"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_correctRate_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="right"
            android:text="@string/correct_rate"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_correctRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="left"
            android:text="@string/correct_rate"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_control2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_control3"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:gravity="center">

        <TextView
            android:id="@+id/rememberTime_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/rememberTime"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/rememberTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/rememberTime"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dictationTime_str"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/dictationTime"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dictationTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/dictationTime"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/totalTime"
            android:textSize="15sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_control3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/again"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:text="@string/tryAgain" />

        <TextView
            android:id="@+id/addoil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/addOil"
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/saveItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:text="@string/saveItem" />

    </LinearLayout>

</RelativeLayout>